# dvc-studio-client

./: .cruft.json  .pre-commit-config.yaml  404.html  CONTRIBUTING.rst  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  leaked-secrets-scan.yaml  pre-commit.yml  release.yml  tests.yml
docs/: index.md
reference/dvc_studio_client/: index.html
reference/dvc_studio_client/auth/: index.html
reference/dvc_studio_client/config/: index.html
reference/dvc_studio_client/env/: index.html
reference/dvc_studio_client/model_registry/: index.html
reference/dvc_studio_client/post_live_metrics/: index.html
reference/dvc_studio_client/schema/: index.html
search/: search_index.json
src/dvc_studio_client/: __init__.py  auth.py  config.py  env.py  model_registry.py  post_live_metrics.py  schema.py
tests/: __init__.py  test_auth.py  test_config.py  test_model_registry.py  test_post_live_metrics.py
