[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "DVC Studio Client"
description = "Small library to post data from DVC/DVCLive to Iterative Studio "
readme = "README.rst"
license = {text = "Apache-2.0"}
authors = [{ name = "Iterative", email = "support@dvc.org" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 1 - Planning",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = []

[project.urls]
Issues = "https://github.com/iterative/DVC Studio Client/issues"
Source = "https://github.com/iterative/DVC Studio Client"

[project.optional-dependencies]
docs = [
    "mkdocs==1.5.2",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-material==9.3.1",
    "mkdocs-section-index==0.3.6",
    "mkdocstrings-python==1.6.3",
]
tests = [
    "pytest==7.2.0",
    "pytest-sugar==0.9.5",
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "mypy==0.971",
]
dev = [
    "DVC Studio Client[tests]",
    "DVC Studio Client[docs]",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["dvc-studio-client", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

<<<<<<<
=======
warn_unreachable = true
files = ["src", "tests"]

[tool.codespell]
ignore-words-list = " "
>>>>>>>
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@overload",
]

[tool.codespell]
ignore-words-list = " "

[tool.pylint.format]
max-line-length = 88

[tool.pylint.message_control]
enable = ["c-extension-no-member", "no-else-return"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
